[package]
name = "ip_demo"
version = "0.1.0"
authors = ["cilvento <cilvento@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
b2dp = { path = "../../b2_rust/b2dp" }